Tue Sep  6 11:32:31 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/Connection_Handler.h:
        * tao/Connection_Handler.cpp:
        * tao/IIOP_Connection_Handler.h:
        * tao/IIOP_Connection_Handler.cpp:
        * tao/Transport.h:
        * tao/Transport.cpp:
        * tao/IIOP_Transport.h:
        * tao/IIOP_Transport.cpp:
        * tao/Endpoint.h:
        * tao/IIOP_Endpoint.cpp:
        * tao/IIOP_Endpoint.h:
        * tao/Profile.h:
        * tao/IIOP_Profile.h:
        * tao/Profile.cpp:
        * tao/IIOP_Profile.h:
        * tao/Transport_Acceptor.h:
        * tao/Traport_Acceptor.cpp:
        * tao/IIOP_Acceptor.h:
        * tao/IIOP_Connector.h:
        * tao/IIOP_Connector.cpp:
        * tao/Transport_Connector.h:
        * tao/Transport_Connector.cpp:

          Added markers within the Pluggable protocols frameworks for
          specializing the implementation with a concrete protocol
          implementation, e.g., iiop.

Mon Sep  5 12:11:28 2005  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_typedef/typedef_ci.cpp:

          Only omit generating the copy, dup, alloc & free operations
          if the typedef is imported. This fixes bugzilla #2222.

        * tests/Bug_2222_Regression/Bug_2222_Regression.mpc:
        * tests/Bug_2222_Regression/TestCase.idl:
        * tests/Bug_2222_Regression/TestType.idl:
        * tests/Bug_2222_Regression/test.cpp:

          Regression test for the above.

Fri Sep 02 13:21:30 2005  Gary Maxey  <gary.maxey@hp.com>

        * performance-tests/Callback/Callback_i.cpp:
        * performance-tests/Latency/DII/client.cpp:
        * performance-tests/Latency/Deferred/client.cpp:
        * performance-tests/Latency/Thread_Per_Connection/Client_Task.cpp:
        * performance-tests/Latency/Thread_Pool/Client_Task.cpp:
        * performance-tests/POA/Demux/demux_test_client.cpp:
        * performance-tests/Sequence_Latency/DII/client.cpp: